# physics-plot

./: .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml
api/: index.html
color/: color-CN.py  color.py
color/color/: index.html
development/: index.html
docs/: api.md  development.md  examples.md  index.md  util-legend-handles.md
docs/color/: color-named.py  color.md
docs/mpl/: mpl-size.md  mpl-size.py
examples/: bode-plot.py  index.html  violin-plot.ipynb
fig/: compare-sg.py  compare.py
mpl/: mpl-size.py
mpl/mpl-plt-fig-ax/: index.html
mpl/mpl-size/: index.html
search/: search_index.json
src/physics_plot/: __init__.py  pp_base.mplstyle  utils.py
util-legend-handles/: index.html
