[project]
name = "physics-plot"
version = "0.1.0"
description = "matplotlib styles and utils"
readme = "README.md"
authors = [
    { name = "Cory Chu", email = "cory@gwlab.page" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
